--- a/config.toml
+++ b/config.toml
@@ -1,16 +1,93 @@
-# The URL the site will be built for
-base_url = "https://ecocode.ca"
+# serene v3.2.0
+#
+# - docs: https://github.com/isunjn/serene/blob/latest/USAGE.md
+# - check for updates: https://github.com/isunjn/serene/releases
+#
+#=========================================================================================
 
-# Whether to automatically compile all Sass files in the sass directory
+base_url = "https://ecocode.ca"      # Domain name of your website
+title = "ecocode"
+description = "A personal blog about [eco|techno]logy and other musings"
+default_language = "en"
+theme = "serene"
+output_dir = "public"
 compile_sass = true
-
-# Whether to build a search index to be used later on by a JavaScript library
-build_search_index = false
+minify_html = true
+build_search_index = false            # Keep this false, search is temporarily unsupported
+generate_feed = false                 # Whether to generate a feed file in root, read docs for more info about rss feed
+feed_filename = "feed.xml"            # The file name of feed, "feed.xml" / "atom.xml" / "rss.xml", read docs for more info
+taxonomies = [{ name = "tags" }, { name = "categories" }]
 
 [markdown]
-# Whether to do syntax highlighting
-# Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
-highlight_code = false
+highlight_code = true
+highlight_theme = "css"
+extra_syntaxes_and_themes = ["highlight_themes"]
+highlight_themes_css = [
+    { theme = "serene-light", filename = "hl-light.css"},
+    { theme = "serene-dark", filename = "hl-dark.css"},
+]
+render_emoji = false
+external_links_target_blank = false
+external_links_no_follow = true
+external_links_no_referrer = true
+smart_punctuation = false
+
+[slugify]
+paths = "on"
+taxonomies = "on"
+anchors = "on"
+
+#=========================================================================================
 
 [extra]
-# Put all your custom variables here
+
+name = "Trevor Gamblin"               # Your name
+id = "threexc"                        # Your id / username / handle
+bio = "Just generating entropy"       # Your bio
+avatar = "img/avatar.webp"            # Your avatar
+links = [                             # Your links
+    { name = "GitHub", icon = "github", url = "https://github.com/threexc" },
+    { name = "Email", icon = "email", url = "mailto:tgamblin@ecocode.ca" },
+]
+
+homepage_layout = "about"             # "about" | "list" | "recent"
+
+recent_max = 15
+recent_more = true
+recent_more_text = "more »"
+
+sections = [
+    { name = "posts", path = "/posts", is_external = false },
+    { name = "projects", path = "/projects", is_external = false },
+    { name = "about", path = "/about", is_external = false },
+    { name = "github", path = "https://github.com/threexc", is_external = true },
+]
+blog_section_path = "/posts"
+
+nav_separator = "::"
+nav_wrapper_left = "{"
+nav_wrapper_right = "} ;"
+nav_wrapper_separator = ","
+
+display_id = true                     # Whether to display your id on homepage
+blog_categorized = true               # Whether to categorize blog posts
+blur_effect = true                    # Whether to turn on blur effect on navigation bar
+back_to_top = true                    # Whether to show back-to-top button on post pages
+
+toc = true                            # Whether to show Table-Of-Contents by default
+copy = true                           # Whether to add a copy button on code blocks by default
+comment = false                       # Whether to show giscus comment section by default, see https://giscus.app for more info
+display_tags = true                   # Whether to display tags on post pages by default
+truncate_summary = false              # Whether to truncate the summary of a post by default
+
+outdate_alert = false                 # Whether to show outdate alert by default
+outdate_alert_days = 120              # How many days will a post be outdated by default
+outdate_alert_text_before = "This article was last updated "
+outdate_alert_text_after = " days ago and may be out of date."
+
+footer_copyright = "© 2024 Trevor Gamblin"
+footer_credits = true                 # Whether to show "powered by zola and serene" in footer
+
+not_found_title = "404"
+not_found_error_text = "Not Found"
+not_found_recover_text = "« back to home »"
