--- a/config.toml
+++ b/config.toml
@@ -53,6 +53,7 @@ sections = [
     { name = "posts", path = "/posts", is_external = false },
     { name = "projects", path = "/projects", is_external = false },
     { name = "about", path = "/about", is_external = false },
+    { name = "uses", path = "/uses", is_external = false },
     { name = "github", path = "https://github.com/threexc", is_external = true },
 ]
 
